--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -36,8 +36,8 @@
 
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
-                class="nav-link">SignIn</a>
+            <a class="nav-link" href="{% url 'user_signup' %}">SignUp</a> <a href="{% url 'user_signin' %}"
+            class="nav-link">SignIn</a>
         </div>
     </nav>
 </body>
