--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -1,5 +1,3 @@
-{% load messages %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -59,21 +57,24 @@
 
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
-                class="nav-link">SignIn</a>
+            <a class="nav-link" href="{% url 'user_signup' %}">SignUp</a> <a href="{% url 'user_signin' %}"
+            class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container my-3">
+    <div class="container mt-5">
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {% if message.tags == "error" %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
+        {% else %}
+        {% endif %}
         {% endfor %}
-        {% endif %}        
+        {% endif %}
         <div class="row no-gutters">
             <div class="col-md-6 col-sm-12 img-container">
                 <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img">
@@ -105,7 +106,7 @@
                     </div>
                     <div class="form-group mb-2">
                         <label for="password">Confirm Password</label>
-                        <input type="password" id="password" name="password" class="form-control"
+                        <input type="password" id="confirmpassword" name="confirmpassword" class="form-control"
                             placeholder="Confirm your password">
                     </div>
                     <div class="text-center my-2">
