--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -6,8 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collect Details</title>
-    <link rel="stylesheet" href="../static/css/details_collection.css">
+    <link rel="stylesheet" href="../static/css/nav.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="icon" href="../static/Monk-logo.png">
+    <style>
+        body {
+            /* margin: 0%;
+            padding: 0%; */
+            box-sizing: border-box;
+            background-color: #1F8A70;
+            color: white;
+        }
+
+        .container {
+            max-width: 400px;
+            max-height: 500px;
+            border: 4px solid black;
+            border-radius: 15px;
+            float: right;
+            margin: 3%;
+            padding: 2%;
+            background-color: white;
+            color: black;
+        }
+
+        .container h1 {
+            text-align: center;
+        }
+
+        .container button {
+            display: block;
+            margin: auto;
+        }
+
+        @media (max-width<=800px) {
+            .container {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -16,10 +54,6 @@
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
             <a href="{% url 'blog' %}" class="anch">
-                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -27,10 +61,6 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
@@ -39,21 +69,61 @@
             <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
         </div>
     </nav>
+    {% if messages %}
+    {% for message in messages %}
+    {% if message.tags == "error" %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
     <div class="container">
-        <form action="collect_details" class="details">
+        <form action="{% url 'collect' %}" class="details" method="post">
+            {% csrf_token %}
             <h1 class="form-title">Personal Details</h1>
-            <label for="gender" class="label">Gender</label><br>
-            <input type="radio" class="radio" required name="gender">Male
-            <input type="radio" class="radio" required name="gender">Female
-            <input type="radio" class="radio" required name="gender">Others <br>
-            <label for="age" class="label">Age</label><br>
-            <input type="number" class="input" max="100" min="10" required name="age" placeholder="(in years)"><br>
-            <label for="height" class="label">Height</label><br>
-            <input type="text" class="input" name="height" placeholder="(in cm)"><br>
-            <label for="weight" class="label">Weight</label><br>
-            <input type="text" class="input weight" required placeholder="(in kg)"><br>
-            <input type="submit" class="submit" name="Submit">
+            <div class="form-group">
+                <label for="gender">Gender</label><br>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" id="male" required name="gender" value="male">
+                    <label class="form-check-label" for="male">Male</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" id="female" required name="gender" value="female">
+                    <label class="form-check-label" for="female">Female</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" id="other" required name="gender" value="other">
+                    <label class="form-check-label" for="other">Other</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="age">Age</label><br>
+                <input type="number" class="form-control" max="100" min="10" required name="age"
+                    placeholder="(in years)">
+            </div>
+            <div class="form-group">
+                <label for="height">Height</label><br>
+                <input type="text" class="form-control" name="height" placeholder="(in cm)">
+            </div>
+            <div class="form-group">
+                <label for="weight">Weight</label><br>
+                <input type="text" class="form-control" name="weight" required placeholder="(in kg)">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+    </div>
+
     </div>
 </body>
 
