--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -15,11 +15,6 @@
             justify-content: center;
         }
 
-        .img-container {
-            max-width: 500px;
-            max-height: 470px;
-        }
-
         .img {
             float: right;
             height: 100%;
@@ -34,6 +29,12 @@
         .form-container {
             width: 100%;
             height: 100%;
+        }
+
+        @media only screen and (max-width: 800px) {
+            .form-check {
+                width: 100%;
+            }
         }
     </style>
 
@@ -58,7 +59,7 @@
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
             <a class="nav-link" href="{% url 'user_signup' %}">SignUp</a> <a href="{% url 'user_signin' %}"
-            class="nav-link">SignIn</a>
+                class="nav-link">SignIn</a>
         </div>
     </nav>
     <div class="container mt-5">
@@ -72,6 +73,12 @@
             </button>
         </div>
         {% else %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         {% endif %}
         {% endfor %}
         {% endif %}
@@ -93,7 +100,23 @@
                         <input type="text" id="lastname" name="lastname" class="form-control"
                             placeholder="Enter your last name">
                     </div>
-
+                    <div class="form-group">
+                        <label for="user-type">Type of User</label><br>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="user-type" id="user" value="user">
+                            <label class="form-check-label" for="user">User</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="user-type" id="physician"
+                                value="physician">
+                            <label class="form-check-label" for="physician">Physician</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="user-type" id="nutritionist"
+                                value="nutritionist">
+                            <label class="form-check-label" for="nutritionist">Nutritionist</label>
+                        </div>
+                    </div>
                     <div class="form-group mb-2">
                         <label for="email">Email</label>
                         <input type="email" id="eamil" name="email" class="form-control"
