--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -9,6 +9,13 @@
     <link rel="icon" href="../static/images/Monk-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+ 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <title>Pose Detection</title>
     <style>
         .row {
@@ -23,10 +30,6 @@
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
             <a href="{% url 'blog' %}" class="anch">
-                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -34,10 +37,6 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
