--- a/app/templates/expert.html
+++ b/app/templates/expert.html
@@ -3,8 +3,15 @@
 <head>
   <link rel="stylesheet" href="../static/css/nav.css">
   <link rel="icon" href="../static/images/Monk-logo.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
   <style>
     .card {
       border-radius: 25px;
@@ -35,32 +42,24 @@
 <body class="bg-dark text-white">
   <nav class="navbar">
     <a href="{% url 'blog' %}" class="anch">
-        <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
+      <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-        <a href="{% url 'blog' %}" class="anch">
-            <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
-            <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
-            <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-            <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-            <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
-        </a>
+      <a href="{% url 'blog' %}" class="anch">
+        <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
+        <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
+        <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
+        <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
+        <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
+        <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
+        <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
+      </a>
     </div>
 
     <div class="nav">
-        <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
-        <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
-      </div>
-</nav>
+      <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
+      <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
+    </div>
+  </nav>
   <div class="container-fluid mt-4">
     <h1 class="text-center  text-white mb-4">Beginner</h1>
     <div class="row justify-content-center">
