--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -10,6 +10,13 @@
     <link rel="icon" href="../static/images/Monk-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+ 
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <style>
         .row {
             justify-content: center;
@@ -62,7 +69,7 @@
                 class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container mt-5">
+    <div class="container mt-4">
         {% if messages %}
         {% for message in messages %}
         {% if message.tags == "error" %}
