--- a/app/templates/expert.html
+++ b/app/templates/expert.html
@@ -57,6 +57,7 @@
 
     <div class="nav">
       <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
+      <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
     </div>
   </nav>
