--- a/app/templates/warrior3-knowledge.html
+++ b/app/templates/warrior3-knowledge.html
@@ -53,7 +53,8 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
+            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
             <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
         </div>
     </nav>
