--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
- 
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
@@ -46,6 +46,35 @@
             width: 100%;
             height: 100%;
         }
+
+        @media only screen and (max-width:600px) {
+
+            .container {
+                margin-bottom: 10%;
+            }
+
+            .watermark {
+                display: none;
+            }
+
+            .navbar {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+
+            .nav-link {
+                display: block;
+                width: 100%;
+                text-align: center;
+            }
+        }
+
+        @media only screen and (width:768px) {
+            .watermark {
+                display: none;
+            }
+        }
     </style>
 
 </head>
@@ -73,7 +102,7 @@
         </div>
     </nav>
     <div class="container mt-5 mb-5">
-        {% if messages %}
+        <!-- {% if messages %}
         {% for message in messages %}
         {% if message.tags == "error" %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -91,19 +120,19 @@
         </div>
         {% endif %}
         {% endfor %}
-        {% endif %}
+        {% endif %} -->
         <div class="row no-gutters">
             <div class="col-md-6 col-sm-12 img-container">
                 <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img">
             </div>
             <div class="col-md-6 col-sm-12 form-container">
                 <form action="{% url 'user_signin' %}" method="post">
-                    {% csrf_token %}
+                    <!-- {% csrf_token %} -->
                     <h2 class="text-center">Sign In</h2>
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label for="username">Email ID</label>
                         <input type="text" id="username" name="username" class="form-control"
-                            placeholder="Enter your username">
+                            placeholder="Enter your email id">
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
