--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
- 
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
@@ -33,14 +33,59 @@
             border: 2px solid red;
         }
 
+        .firstname,
+        .lastname {
+            display: inline-block;
+            width: 45%;
+        }
+
+        .lastname {
+            margin-left: 8%;
+        }
+
         .form-container {
             width: 100%;
             height: 100%;
         }
 
-        @media only screen and (max-width: 800px) {
+        @media only screen and (max-width:600px) {
             .form-check {
                 width: 100%;
+            }
+
+            .container {
+                margin-bottom: 10%;
+            }
+
+            .watermark {
+                display: none;
+            }
+
+            .navbar {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .nav-link {
+                display: block;
+                width: 100%;
+                text-align: center;
+            }
+
+            .firstname,
+            .lastname {
+                display: block;
+                width: 100%;
+            }
+
+            .lastname {
+                margin-left: 0%;
+            }
+        }
+
+        @media only screen and (width:768px) {
+            .watermark {
+                display: none;
             }
         }
     </style>
@@ -97,12 +142,12 @@
                 <form action="{% url 'user_signup' %}" method="post">
                     {% csrf_token %}
                     <h2 class="text-center">Sign Up</h2>
-                    <div class="form-group" style="display: inline-block; width: 45%;">
+                    <div class="form-group firstname">
                         <label for="firstname">First Name</label>
                         <input type="text" id="firstname" name="firstname" class="form-control"
                             placeholder="Enter your first name">
                     </div>
-                    <div class="form-group" style="display: inline-block; width: 45%; margin-left: 8%;">
+                    <div class="form-group lastname">
                         <label for="lastname">Last Name</label>
                         <input type="text" id="lastname" name="lastname" class="form-control"
                             placeholder="Enter your last name">
