--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -15,6 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
     <style>
         .container {
             background-color: #fff;
@@ -25,10 +26,12 @@
             max-width: 700px;
         }
 
-        .alert {
-            max-width: 700px;
-            margin: auto;
-            display: block;
+        .container h1 {
+            font-size: 36px;
+            font-weight: bold;
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 40px;
         }
     </style>
 
