--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -12,30 +12,21 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
- 
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <link rel="icon" href="../static/Monk-logo.png">
     <style>
-        body {
-            /* margin: 0%;
-            padding: 0%; */
-            box-sizing: border-box;
-            background-color: #1F8A70;
-            color: white;
-        }
-
         .container {
             max-width: 400px;
             max-height: 500px;
-            border: 4px solid black;
+            border: 2px solid black;
             border-radius: 15px;
+            display: block;
+            margin: 3%;
             float: right;
-            margin: 1%;
             padding: 2%;
-            background-color: white;
-            color: black;
         }
 
         .container h1 {
@@ -77,7 +68,7 @@
             <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
         </div>
     </nav>
-    {% if messages %}
+    <!-- {% if messages %}
     {% for message in messages %}
     {% if message.tags == "error" %}
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -95,10 +86,10 @@
     </div>
     {% endif %}
     {% endfor %}
-    {% endif %}
+    {% endif %} -->
     <div class="container">
         <form action="{% url 'collect' %}" class="details" method="post">
-            {% csrf_token %}
+            <!-- {% csrf_token %} -->
             <h1 class="form-title">Personal Details</h1>
             <div class="form-group">
                 <label for="gender">Gender</label><br>
