--- a/app/templates/tree-knowledge.html
+++ b/app/templates/tree-knowledge.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 
-<body class="bg-dark text-white">
+<body>
     <nav class="navbar">
         <a href="{% url 'blog' %}" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
