--- a/app/templates/advanced.html
+++ b/app/templates/advanced.html
@@ -1,16 +1,21 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Advanced</title>
+  <link rel="stylesheet" href="../static/css/nav.css">
+  <link rel="icon" href="../static/images/Monk-logo.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../static/css/nav.css">
-  <link rel="icon" href="../static/images/Monk-logo.png">
   <style>
     .card {
       border-radius: 25px;
@@ -26,11 +31,6 @@
       border-radius: 25px;
     }
 
-    .card .btn:hover {
-      color: #007bff;
-      background-color: #fff;
-    }
-
     .card-text,
     .card-title {
       color: black;
@@ -39,6 +39,11 @@
     .nav-link {
       display: inline-block;
     }
+
+    .img,
+      .btn {
+        max-width: 100%;
+      }
   </style>
 </head>
 
@@ -67,36 +72,33 @@
   <div class="container-fluid mt-4">
     <h1 class="text-center  text-white mb-4">Advanced</h1>
     <div class="row justify-content-center">
-      <div class="col-4 h-100">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 h-100">
         <div class="card mb-3">
           <div class="card-body text-center">
             <h2 class="card-title">Downdog</h2>
-            <img src="../static/images/downdog.jpg" alt="Downdog pose Image" width="300px" height="300px"
-              class="mx-auto d-block">
+            <img src="../static/images/downdog.jpg" alt="Downdog pose Image" class="mx-auto d-block img">
             <div class="text-center mt-4">
               <a href="{% url 'downdog-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-4 h-100">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 h-100">
         <div class="card mb-3">
           <div class="card-body text-center">
             <h2 class="card-title">Triangle</h2>
-            <img src="../static/images/triangle.jpg" alt="Warrior1 Pose Image" width="300px" height="300px"
-              class="mx-auto d-block">
+            <img src="../static/images/triangle.jpg" alt="Warrior1 Pose Image" class="mx-auto d-block img">
             <div class="text-center mt-4">
               <a href="{% url 'triangle-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-4 h-100">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 h-100">
         <div class="card mb-3">
           <div class="card-body text-center">
             <h2 class="card-title">Warrior3</h2>
-            <img src="../static/images/warrior3.jpg" alt="Warrior3 Pose Image" width="300px" height="300px"
-              class="mx-auto d-block">
+            <img src="../static/images/warrior3.jpg" alt="Warrior3 Pose Image" class="mx-auto d-block img">
             <div class="text-center mt-4">
               <a href="{% url 'warrior3-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
             </div>
