--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -116,15 +116,15 @@
             <div class="form-group">
                 <label for="gender">Gender</label><br>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="male" required name="gender" value="male">
+                    <input type="radio" class="form-check-input" id="male" required name="gender" value="Male">
                     <label class="form-check-label" for="male">Male</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="female" required name="gender" value="female">
+                    <input type="radio" class="form-check-input" id="female" required name="gender" value="Female">
                     <label class="form-check-label" for="female">Female</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="other" required name="gender" value="other">
+                    <input type="radio" class="form-check-input" id="other" required name="gender" value="Others">
                     <label class="form-check-label" for="other">Other</label>
                 </div>
             </div>
