--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -90,7 +90,7 @@
             <li class="list-group-item">Age(years): {{ user.age }}</li>
             {% endif %}
             {% if user.type_of_user %}
-            <li class="list-group-item">Tyep of User: {{ user.type_of_user }}</li>
+            <li class="list-group-item">Type of User: {{ user.type_of_user }}</li>
             {% endif %}
             {% if user.gender %}
             <li class="list-group-item">Gender: {{ user.gender }}</li>
