--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -20,17 +20,22 @@
     <style>
         .row {
             justify-content: center;
+            box-shadow: 0px 0px 25px black;
+            border-radius: 25px;
         }
 
         .img {
             float: right;
             height: 100%;
             width: 100%;
+            border-radius: 25px;
+            border-top-right-radius: 0%;
+            border-bottom-right-radius: 0%;
         }
 
         form {
             padding: 3%;
-            border: 2px solid red;
+            border-radius: 25px;
         }
 
         .firstname,
@@ -43,12 +48,7 @@
             margin-left: 8%;
         }
 
-        .form-container {
-            width: 100%;
-            height: 100%;
-        }
-
-        @media only screen and (max-width:600px) {
+        @media only screen and (width<768px) {
             .form-check {
                 width: 100%;
             }
@@ -81,11 +81,27 @@
             .lastname {
                 margin-left: 0%;
             }
+
+            .img {
+                border-bottom-left-radius: 0%;
+                border-bottom-right-radius: 0%;
+                border-top-right-radius: 25px;
+            }
         }
 
-        @media only screen and (width:768px) {
+        @media only screen and (width>600px) and (width<=1000px) {
             .watermark {
                 display: none;
+            }
+
+            .firstname,
+            .lastname {
+                display: block;
+                width: 100%;
+            }
+
+            .lastname {
+                margin-left: 0%;
             }
         }
     </style>
@@ -115,7 +131,7 @@
         </div>
     </nav>
     <div class="container mt-4">
-        {% if messages %}
+        <!-- {% if messages %}
         {% for message in messages %}
         {% if message.tags == "error" %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -133,14 +149,14 @@
         </div>
         {% endif %}
         {% endfor %}
-        {% endif %}
+        {% endif %} -->
         <div class="row no-gutters">
             <div class="col-md-6 col-sm-12 img-container">
                 <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img">
             </div>
             <div class="col-md-6 col-sm-12 form-container">
                 <form action="{% url 'user_signup' %}" method="post">
-                    {% csrf_token %}
+                    <!-- {% csrf_token %} -->
                     <h2 class="text-center">Sign Up</h2>
                     <div class="form-group firstname">
                         <label for="firstname">First Name</label>
@@ -155,7 +171,8 @@
                     <div class="form-group">
                         <label for="user-type">Type of User</label><br>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="user-type" id="user" value="User" required>
+                            <input class="form-check-input" type="radio" name="user-type" id="user" value="User"
+                                required>
                             <label class="form-check-label" for="user">User</label>
                         </div>
                         <div class="form-check form-check-inline">
