--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -18,6 +18,25 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <style>
+        .container {
+            padding: 1.5rem 8rem;
+        }
+
+        form {
+            padding: 1rem;
+        }
+
+        .firstname,
+        .lastname {
+            display: inline-block;
+            width: 45%;
+            margin-bottom: 0.5rem;
+        }
+
+        .lastname {
+            margin-left: 5%;
+        }
+
         .row {
             justify-content: center;
             box-shadow: 0px 0px 25px black;
@@ -31,21 +50,6 @@
             border-radius: 25px;
             border-top-right-radius: 0%;
             border-bottom-right-radius: 0%;
-        }
-
-        form {
-            padding: 3%;
-            border-radius: 25px;
-        }
-
-        .firstname,
-        .lastname {
-            display: inline-block;
-            width: 45%;
-        }
-
-        .lastname {
-            margin-left: 8%;
         }
 
         @media only screen and (width<768px) {
