--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -21,6 +21,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap" rel="stylesheet">
     <style>
+        .container {
+            padding: 2rem 8rem;
+        }
+
+        form {
+            padding: 5rem 1rem;
+        }
+
         .row {
             justify-content: center;
             box-shadow: 0px 0px 25px black;
@@ -41,7 +49,7 @@
             border-bottom-right-radius: 0%;
         }
 
-        form {
+        /* form {
             padding: 15% 2%;
             border-radius: 25px;
         }
@@ -49,7 +57,7 @@
         .form-container {
             width: 100%;
             height: 100%;
-        }
+        } */
 
         @media only screen and (width<768px) {
 
