--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -63,6 +63,7 @@
 
             .container {
                 margin-bottom: 10%;
+                padding: 0%;
             }
 
             .watermark {
@@ -93,11 +94,9 @@
                 display: none;
             }
 
-            /* .img {
-                border-bottom-left-radius: 0%;
-                border-bottom-right-radius: 0%;
-                border-top-right-radius: 25px;
-            } */
+            .container{
+                padding: 0%;
+            }
         }
     </style>
 
