--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -53,6 +53,11 @@
         }
 
         @media only screen and (width<768px) {
+
+            .container {
+                padding: 0%;
+            }
+
             .form-check {
                 width: 100%;
             }
@@ -94,6 +99,10 @@
         }
 
         @media only screen and (width>600px) and (width<=1000px) {
+            .container {
+                padding: 0%;
+            }
+
             .watermark {
                 display: none;
             }
